--- a/index.html
+++ b/index.html
@@ -4,51 +4,68 @@
 	<script src= "http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 	<link href='css/bootstrap.css' rel='stylesheet'>
+	<link href='css/main.css' rel='stylesheet'>
 	<script src='js/bootstrap.js'></script>
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 	
 	<title></title>
 </head>
 <body>
+	<div class='navbar navbar-inverse navbar-static-top'>
+		<div class='container'>	
+			<a href='/' class='navbar-brand'>Caroline Morgan</a>
+			<ul class='nav navbar-nav navbar-right'>
+				<li><a href='about.html'>About Me</a></li>
+				<li><a href='projects.html'>Projects</a></li>
+				<li><a href='contact.html'>Contact Me</a></li>
+			</ul>
+		</div>
+	</div>
 	<div class='container'>	
-		<div class='col-md-12'>
-			<h1>Caroline's Website</h1>
-			<h2>Full-Stack Web Developer</h2>
+		<div class = 'row well well-lg'>
+			<div class='col-md-4'>
+				<h3>Where-Fi</h3>
+				<p>Look! We made a where-fi app! Oh I wish I could fly, I wish I could touch the sky. I think about it every night and day.  Spread my wings and fly awayyy! I believe I can soar, see me runnign through that open door! </p>
+				<button type='button' class='btn btn-lg btn-default'>Go to where-fi</button>
+			</div>
+			<div class ='col-md-7 col-md-offset-1'>
+				<img src='images/wherefi.png' alt='wherefi'/>
+			</div>
 		</div>
 
-		<div class='col-md-4'>
-			<h3>Where-Fi</h3>
-			<p>Look! We made a where-fi app! Oh I wish I could fly, I wish I could touch the sky. I think about it every night and day.  Spread my wings and fly awayyy! I believe I can soar, see me runnign through that open door! </p>
-			<button type='button'>Go to where-fi</button>
-		</div>
-		<div class ='col-md-7 col-md-offset-1'>
-			<img src='images/wherefi.png' alt='wherefi'/>
-		</div>
-
-		<div class='col-md-4'>
-			<h3>Workout Journal</h3>
-			<p>No we have no excuses for not working out. Look at how much text I have right now! It's probably going to wrap on the page! Look Look Look!</p>
-			<button type='button'>Go to workout journal</button>
-		</div>
-		<div class ='col-md-7 col-md-offset-1'>
-			<img src='images/workout_journal.png' alt='workoutjournal'/>
+		<div class='row well well-lg'>
+			<div class='col-md-4'>
+				<h3>Workout Journal</h3>
+				<p>No we have no excuses for not working out. Look at how much text I have right now! It's probably going to wrap on the page! Look Look Look!</p>
+				<button type='button' class='btn btn-lg btn-default'>Go to workout journal</button>
+			</div>
+			<div class ='col-md-7 col-md-offset-1'>
+				<img src='images/workout_journal.png' alt='workoutjournal'/>
+			</div>
 		</div>
 
-		<div class='col-md-4'>
-			<h3>Fridge Food</h3>
-			<p>Never let food go bad again!</p>
-			<button type='button'>Go to Fridge Food</button>
-		</div>
-		<div class ='col-md-7 col-md-offset-1'>
-			<img src='images/FridgeFood.png' alt='fridgefood'?>
-		</div>
-
-		<div class='col-md-12'>
-			<i class="fa fa-envelope-o"></i>
-			<i class="fa fa-github-square fa-lg"></i>
-			<i class="fa fa-linkedin"></i>
+		<div class='row well well-lg'>
+			<div class='col-md-4'>
+				<h3>Fridge Food</h3>
+				<p>Never let food go bad again!</p>
+				<button type='button' class='btn btn-lg btn-default'>Go to Fridge Food</button>
+			</div>
+			<div class ='col-md-7 col-md-offset-1'>
+				<img src='images/FridgeFood.png' alt='fridgefood'?>
+			</div>
 		</div>
 
+		<div class='footer'>
+		  <div class='container'>
+		    <div class='row'>
+					<div class='col-md-12 text-center'>
+						<a href='mailto:caroline.alice.morgan@gmail.com'><i class="fa fa-envelope-o fa-2x"></i></a>
+						<a href='http://www.github.com/CaptainM'><i class="fa fa-github-square fa-2x"></i></a>
+						<a href = 'http://www.linkedin.com/in/carolinealicemorgan'><i class="fa fa-linkedin fa-2x"></i></a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
