--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
 <body>
 	<div class='navbar navbar-inverse navbar-static-top'>
 		<div class='container'>	
-			<a href='/' class='navbar-brand'>Caroline Morgan</a>
-			<ul class='nav navbar-nav navbar-right'>
-				<li><a href='about.html'>About Me</a></li>
+			<div class='navbar-header'>
+				<a href='/' class='navbar-brand'>Caroline Morgan</a>
+				<button type='button' class='navbar-toggle'
+					data-toggle='collapse' 
+					data-target='.navbar-collapse'>
+					<span class='sr-only'>Toggle Navigation></span>
+					<span class='icon-bar'></span>
+					<span class='icon-bar'></span>
+					<span class='icon-bar'></span>
+				</button>
+			</div>
+			<ul class='nav navbar-nav navbar-right collapse navbar-collapse'>
+				<li><a href='./about'>About Me</a></li>
 				<li><a href='projects.html'>Projects</a></li>
 				<li><a href='contact.html'>Contact Me</a></li>
 			</ul>
