--- a/index.html
+++ b/index.html
@@ -7,64 +7,106 @@
 	<link href='css/main.css' rel='stylesheet'>
 	<script src='js/bootstrap.js'></script>
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+
 	
 	<title></title>
 </head>
 <body>
-	<div class='navbar navbar-inverse navbar-static-top'>
+
+	<section id='navigation'></section>
+		<div class='navbar navbar-inverse navbar-fixed-top'>
+			<div class='container'>	
+				<div class='navbar-header'>
+					<a href='/' class='navbar-brand'>Caroline Morgan</a>
+					<button type='button' class='navbar-toggle'
+						data-toggle='collapse' 
+						data-target='.navbar-collapse'>
+						<span class='sr-only'>Toggle Navigation></span>
+						<span class='icon-bar'></span>
+						<span class='icon-bar'></span>
+						<span class='icon-bar'></span>
+					</button>
+				</div>
+				<ul class='nav navbar-nav navbar-right collapse navbar-collapse'>
+					<li><a href='#about'>About Me</a></li>
+					<li><a href='#projects'>Projects</a></li>
+					<li><a href='#contact'>Contact Me</a></li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<section id='about'>
+		<div class='container'>
+			<h1>About Me</h1>
+			<div class='row well well-lg'>
+				<div class='col-md-4'>
+					<h3>Junior Full-Stack Web Developer</h3>
+					<p>Thanks for stopping by!  I'm a Product Manager turned Web Developer, and couldn't be happier with the change. I enjoy learning new things, which is lucky given my profession of choice.  I'm an adventure seeker by nature and I'm looking forward to my next professional chapter.</p>
+				</div>
+				<div class ='col-md-7 col-md-offset-1'>
+					<img src='images/Caroline_Morgan.JPG' alt='CarolineImage'?>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id='projects'></section>	
 		<div class='container'>	
-			<div class='navbar-header'>
-				<a href='/' class='navbar-brand'>Caroline Morgan</a>
-				<button type='button' class='navbar-toggle'
-					data-toggle='collapse' 
-					data-target='.navbar-collapse'>
-					<span class='sr-only'>Toggle Navigation></span>
-					<span class='icon-bar'></span>
-					<span class='icon-bar'></span>
-					<span class='icon-bar'></span>
-				</button>
+			<h1>Projects</h1>
+			<div class='row well well-lg'>
+				<div class='col-md-4'>
+					<h3>Fridge Food</h3>
+					<p>Simply enter in the ingredients that you have around the house, and Fridge Food will return delightful recipes that use each of your specified ingredients.  You'll never have food go bad again!</p>
+					<a type='button' class='btn btn-lg btn-default' href='http://104.236.245.60' target="_blank">Go to Fridge Food</a>
+				</div>
+				<div class ='col-md-7 col-md-offset-1'>
+					<img src='images/FridgeFood.png' alt='fridgefood'?>
+				</div>
 			</div>
-			<ul class='nav navbar-nav navbar-right collapse navbar-collapse'>
-				<li><a href='./about'>About Me</a></li>
-				<li><a href='projects.html'>Projects</a></li>
-				<li><a href='contact.html'>Contact Me</a></li>
-			</ul>
-		</div>
-	</div>
-	<div class='container'>	
-		<div class = 'row well well-lg'>
-			<div class='col-md-4'>
-				<h3>Where-Fi</h3>
-				<p>Look! We made a where-fi app! Oh I wish I could fly, I wish I could touch the sky. I think about it every night and day.  Spread my wings and fly awayyy! I believe I can soar, see me runnign through that open door! </p>
-				<button type='button' class='btn btn-lg btn-default'>Go to where-fi</button>
-			</div>
-			<div class ='col-md-7 col-md-offset-1'>
-				<img src='images/wherefi.png' alt='wherefi'/>
-			</div>
-		</div>
 
-		<div class='row well well-lg'>
-			<div class='col-md-4'>
-				<h3>Workout Journal</h3>
-				<p>No we have no excuses for not working out. Look at how much text I have right now! It's probably going to wrap on the page! Look Look Look!</p>
-				<button type='button' class='btn btn-lg btn-default'>Go to workout journal</button>
+
+			<div class='row well well-lg'>
+				<div class='col-md-4'>
+					<h3>Workout Journal</h3>
+					<p>Now you have no excuse for not working out. The Workout Journal offers you a new workout everyday directly from a personal trainer.  If you forget exactly how to perform the workout, the app displays a Youtube clip which demonstrates the workout.</p>
+					<a type='button' class='btn btn-lg btn-default' href='http://104.131.73.31' target="_blank">Go to Workout Journal</a>
+				</div>
+				<div class ='col-md-7 col-md-offset-1'>
+					<img src='images/workout_journal.png' alt='workoutjournal'/>
+				</div>
 			</div>
-			<div class ='col-md-7 col-md-offset-1'>
-				<img src='images/workout_journal.png' alt='workoutjournal'/>
+
+			<div class = 'row well well-lg'>
+				<div class='col-md-4'>
+					<h3>Where-Fi</h3>
+					<p>Are you living in NYC and constantly looking for free wifi?  Where-Fi offers a list of free wifi hotspots in NYC.  Simply enter in your address, and you can see all the wifi hotspots within a specified radius.  You can also follow Where-fi on twitter to find out when new hotspots are added or removed. (Collaborated with a three-person group) </p>
+					<a type='button' class='btn btn-lg btn-default' href='http://wherefi.herokuapp.com/' target="_blank">Go to Where-Fi</a>
+				</div>
+				<div class ='col-md-7 col-md-offset-1'>
+					<img src='images/wherefi.png' alt='wherefi'/>
+				</div>
+			</div>
+
+		</div>
+	</section>
+
+
+	<section id='contact'>
+		<div class='container'>
+			<h1>Contact</h1>
+			<div class='col-md-12 text-center'>
+				<div class='row well well-lg'>
+					
+					<h3>I would love to hear from you!</h3>
+					<p>If you have any questions or want to chat, feel free to send me an email at caroline.alice.morgan@gmail.com</p>
+			</div>
 			</div>
 		</div>
+	</section>
 
-		<div class='row well well-lg'>
-			<div class='col-md-4'>
-				<h3>Fridge Food</h3>
-				<p>Never let food go bad again!</p>
-				<button type='button' class='btn btn-lg btn-default'>Go to Fridge Food</button>
-			</div>
-			<div class ='col-md-7 col-md-offset-1'>
-				<img src='images/FridgeFood.png' alt='fridgefood'?>
-			</div>
-		</div>
-
+	<section id='footer'>
 		<div class='footer'>
 		  <div class='container'>
 		    <div class='row'>
@@ -76,6 +118,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 </body>
 </html>
